{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 49,
  "lineage": "e5b78a88-e270-dfc6-5a33-bc8177dd8070",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:288981565834:vpc/vpc-01cf3c8a6e09fd31a",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05a974d17e2e23066",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0b98cd5f188f37c1d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01cf3c8a6e09fd31a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-097b820debab6eec3",
            "owner_id": "288981565834"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:288981565834:loadbalancer/app/cs6650-assignment03-alb/137fa9c0838cf4aa",
            "arn_suffix": "app/cs6650-assignment03-alb/137fa9c0838cf4aa",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cs6650-assignment03-alb-1939549248.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:288981565834:loadbalancer/app/cs6650-assignment03-alb/137fa9c0838cf4aa",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cs6650-assignment03-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d48ac48ab0dc68e6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-021861d806074cffd"
              },
              {
                "subnet_id": "subnet-064b38b159c76e861"
              },
              {
                "subnet_id": "subnet-0976dc06e85ad55bd"
              },
              {
                "subnet_id": "subnet-0f8bc91ea7e397e78"
              }
            ],
            "subnets": [
              "subnet-021861d806074cffd",
              "subnet-064b38b159c76e861",
              "subnet-0976dc06e85ad55bd",
              "subnet-0f8bc91ea7e397e78"
            ],
            "tags": {
              "Name": "cs6650-assignment03-alb",
              "Project": "cs6650-assignment03"
            },
            "tags_all": {
              "Name": "cs6650-assignment03-alb",
              "Project": "cs6650-assignment03"
            },
            "vpc_id": "vpc-01cf3c8a6e09fd31a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:288981565834:listener/app/cs6650-assignment03-alb/137fa9c0838cf4aa/c9cabcca6303b118",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "No matching route found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:288981565834:listener/app/cs6650-assignment03-alb/137fa9c0838cf4aa/c9cabcca6303b118",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:288981565834:loadbalancer/app/cs6650-assignment03-alb/137fa9c0838cf4aa",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "cs6650-assignment03-http-listener",
              "Project": "cs6650-assignment03"
            },
            "tags_all": {
              "Name": "cs6650-assignment03-http-listener",
              "Project": "cs6650-assignment03"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "credit_card_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:288981565834:targetgroup/cs6650-assignment03-cca-tg/d60a19a829c6802f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:288981565834:listener-rule/app/cs6650-assignment03-alb/137fa9c0838cf4aa/c9cabcca6303b118/cb4326bb09c7ef7c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/credit-card*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:288981565834:listener-rule/app/cs6650-assignment03-alb/137fa9c0838cf4aa/c9cabcca6303b118/cb4326bb09c7ef7c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:288981565834:listener/app/cs6650-assignment03-alb/137fa9c0838cf4aa/c9cabcca6303b118",
            "priority": 300,
            "tags": {
              "Name": "cs6650-assignment03-cca-rule",
              "Project": "cs6650-assignment03"
            },
            "tags_all": {
              "Name": "cs6650-assignment03-cca-rule",
              "Project": "cs6650-assignment03"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.credit_card",
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "product_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:288981565834:targetgroup/cs6650-assignment03-product-tg/c36bb961ba9bc20e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:288981565834:listener-rule/app/cs6650-assignment03-alb/137fa9c0838cf4aa/c9cabcca6303b118/802e79dcb462fcd1",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/product*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:288981565834:listener-rule/app/cs6650-assignment03-alb/137fa9c0838cf4aa/c9cabcca6303b118/802e79dcb462fcd1",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:288981565834:listener/app/cs6650-assignment03-alb/137fa9c0838cf4aa/c9cabcca6303b118",
            "priority": 100,
            "tags": {
              "Name": "cs6650-assignment03-product-rule",
              "Project": "cs6650-assignment03"
            },
            "tags_all": {
              "Name": "cs6650-assignment03-product-rule",
              "Project": "cs6650-assignment03"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.product",
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "shopping_cart_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:288981565834:targetgroup/cs6650-assignment03-cart-tg/3dcff5c84642acee",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:288981565834:listener-rule/app/cs6650-assignment03-alb/137fa9c0838cf4aa/c9cabcca6303b118/44689ceab6e06a95",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/shopping-cart*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:288981565834:listener-rule/app/cs6650-assignment03-alb/137fa9c0838cf4aa/c9cabcca6303b118/44689ceab6e06a95",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:288981565834:listener/app/cs6650-assignment03-alb/137fa9c0838cf4aa/c9cabcca6303b118",
            "priority": 200,
            "tags": {
              "Name": "cs6650-assignment03-cart-rule",
              "Project": "cs6650-assignment03"
            },
            "tags_all": {
              "Name": "cs6650-assignment03-cart-rule",
              "Project": "cs6650-assignment03"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.shopping_cart",
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "credit_card",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:288981565834:targetgroup/cs6650-assignment03-cca-tg/d60a19a829c6802f",
            "arn_suffix": "targetgroup/cs6650-assignment03-cca-tg/d60a19a829c6802f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:288981565834:targetgroup/cs6650-assignment03-cca-tg/d60a19a829c6802f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:288981565834:loadbalancer/app/cs6650-assignment03-alb/137fa9c0838cf4aa"
            ],
            "load_balancing_algorithm_type": "weighted_random",
            "load_balancing_anomaly_mitigation": "on",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cs6650-assignment03-cca-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cs6650-assignment03-cca-tg",
              "Project": "cs6650-assignment03"
            },
            "tags_all": {
              "Name": "cs6650-assignment03-cca-tg",
              "Project": "cs6650-assignment03"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01cf3c8a6e09fd31a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "product",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:288981565834:targetgroup/cs6650-assignment03-product-tg/c36bb961ba9bc20e",
            "arn_suffix": "targetgroup/cs6650-assignment03-product-tg/c36bb961ba9bc20e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:288981565834:targetgroup/cs6650-assignment03-product-tg/c36bb961ba9bc20e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:288981565834:loadbalancer/app/cs6650-assignment03-alb/137fa9c0838cf4aa"
            ],
            "load_balancing_algorithm_type": "weighted_random",
            "load_balancing_anomaly_mitigation": "on",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cs6650-assignment03-product-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cs6650-assignment03-product-tg",
              "Project": "cs6650-assignment03"
            },
            "tags_all": {
              "Name": "cs6650-assignment03-product-tg",
              "Project": "cs6650-assignment03"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01cf3c8a6e09fd31a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "shopping_cart",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:288981565834:targetgroup/cs6650-assignment03-cart-tg/3dcff5c84642acee",
            "arn_suffix": "targetgroup/cs6650-assignment03-cart-tg/3dcff5c84642acee",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:288981565834:targetgroup/cs6650-assignment03-cart-tg/3dcff5c84642acee",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:288981565834:loadbalancer/app/cs6650-assignment03-alb/137fa9c0838cf4aa"
            ],
            "load_balancing_algorithm_type": "weighted_random",
            "load_balancing_anomaly_mitigation": "on",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cs6650-assignment03-cart-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cs6650-assignment03-cart-tg",
              "Project": "cs6650-assignment03"
            },
            "tags_all": {
              "Name": "cs6650-assignment03-cart-tg",
              "Project": "cs6650-assignment03"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01cf3c8a6e09fd31a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:288981565834:security-group/sg-0d48ac48ab0dc68e6",
            "description": "Allow inbound HTTP to the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d48ac48ab0dc68e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cs6650-assignment03-alb-sg",
            "name_prefix": "",
            "owner_id": "288981565834",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cs6650-assignment03-alb-sg",
              "Project": "cs6650-assignment03"
            },
            "tags_all": {
              "Name": "cs6650-assignment03-alb-sg",
              "Project": "cs6650-assignment03"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cf3c8a6e09fd31a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:288981565834:security-group/sg-0770b50a0837be381",
            "description": "Allow traffic from ALB to ECS microservices",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0770b50a0837be381",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Inter-service communication",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Traffic from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d48ac48ab0dc68e6"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "cs6650-assignment03-ecs-sg",
            "name_prefix": "",
            "owner_id": "288981565834",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cs6650-assignment03-ecs-sg",
              "Project": "cs6650-assignment03"
            },
            "tags_all": {
              "Name": "cs6650-assignment03-ecs-sg",
              "Project": "cs6650-assignment03"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cf3c8a6e09fd31a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:288981565834:security-group/sg-0a84a7fd064f7f0c9",
            "description": "Allow AMQP from ECS services and management UI access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a84a7fd064f7f0c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RabbitMQ management console",
                "from_port": 15672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15672
              },
              {
                "cidr_blocks": [],
                "description": "AMQP from ECS services",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0770b50a0837be381"
                ],
                "self": false,
                "to_port": 5672
              }
            ],
            "name": "cs6650-assignment03-rabbitmq-sg",
            "name_prefix": "",
            "owner_id": "288981565834",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cs6650-assignment03-rabbitmq-sg",
              "Project": "cs6650-assignment03"
            },
            "tags_all": {
              "Name": "cs6650-assignment03-rabbitmq-sg",
              "Project": "cs6650-assignment03"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cf3c8a6e09fd31a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_services",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}